@@ -35,9 +35,7 @@ extern fd_set *global_readfds, *global_writefds, *global_xfds;
 extern struct in_addr ctl_addr;
 extern struct in_addr special_addr;
 extern struct in_addr alias_addr;
-#if 0
 extern struct in_addr our_addr;
-#endif
 extern struct in_addr loopback_addr;
 extern char *username;
 extern char *socket_path;
